--- a/src/style.css
+++ b/src/style.css
@@ -53,23 +53,46 @@ header > nav > a:hover{
     color: rgb(199, 73, 0);
 }
 
+/*Apresentações*/
 div#me{
-    background-color: yellow;
-    min-height: 570px;
+    position: relative;
+    background-color: var(--cor3);
+    min-height: 800px;
 }
 
+div#me > div{
+    position: absolute;
+    top: 30%;
+    left: 4%;
+    font-size: 2.5em;
+    line-height: 2.5em;
+}
+
+div#me > div > h1{
+    color: rgb(18, 20, 175);
+}
+
+div#me > img{
+    position: absolute;
+    top: 20%;
+    left: 60%;
+}
+
+/*Sobre*/
 div#above{
-    background-color: crimson; 
+    background-color: var(--cor1); 
     min-height: 100px;
 }
 
+/*Habilidades*/
 div#mySkills{
-    background-color: purple;
+    background-color: var(--cor4);
     min-height: 100px;
 }
 
+/*Projetos*/
 div#myProjects{
-    background-color: pink;
+    background-color: var(--cor0);
     min-height: 100px;
 }
 
@@ -86,16 +109,16 @@ footer > img{
     margin-top: 25px;
 }
 
-footer > a > img{
-    width: 100px;
-    height: 100px;
-    margin-top: 25px;
-    margin-right: 30px;
-}
-
 footer > div{
     display: inline-block;
     margin-left: 10px;
     margin-top: 55px;
     margin-right: 1200px;
+}
+
+footer > a > img{
+    width: 100px;
+    height: 100px;
+    margin-top: 25px;
+    margin-right: 30px;
 }
