--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,19 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Maven Pro', sans-serif;
-    color: var(--cor5);
+    color: var(--cor6);
     text-decoration: none;
+}
+
+h1{
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+p{
+    text-align: justify;
+    margin-bottom: 20px;
 }
 
 @font-face{
@@ -23,6 +34,7 @@
     --cor3: #00ccc0;
     --cor4: #72f2eb;
     --cor5: #292b2b;
+    --cor6: #171818;
 }
 
 /*Cabeçalho*/
@@ -82,18 +94,24 @@ div#me > img{
 div#above{
     background-color: var(--cor1); 
     min-height: 100px;
+    padding: 50px;
+    font-size: 2em;
 }
 
 /*Habilidades*/
 div#mySkills{
     background-color: var(--cor4);
     min-height: 100px;
+    padding: 50px;
+    font-size: 2em;
 }
 
 /*Projetos*/
 div#myProjects{
     background-color: var(--cor0);
     min-height: 100px;
+    padding: 50px;
+    font-size: 2em;
 }
 
 /*Rodapé*/
